# trends-surfer

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
scripts/: fetch.py  smoke.py
src/trends_surfer/: __init__.py  browser.py  consent.py  playbook.py  ratelimit.py  server.py  store.py  trends.py
