[project]
name = "trends_surfer"
version = "0.1.0"
description = "Natural-language Google Trends MCP server with stealth-browser fetching and a non-bypassable rate limit."
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp>=1.2",
    "patchright>=1.50",
    "playwright>=1.50",
    "playwright-stealth>=2.0",
    "anyio>=4.0",
]

[project.scripts]
trends-surfer-server = "trends_surfer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trends_surfer"]
